--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
   <!-- Config -->
   <script>
-    window.API_BASE_URL = 'http://127.0.0.1:5000';
+    window.API_BASE_URL = 'https://quickcommerce-b.onrender.com';
     window.USE_MOCK = false;
   </script>
 
